# CorreX

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVNOTES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  PROJECT_STATUS.md  QUICK_START.md  README.md  RELEASE_INSTRUCTIONS.md  ROADMAP.md  SECURITY.md  build_exe.spec  pyproject.toml  pytest.ini  run_tests.py  setup.py  test_install.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
correX/: DICTATION_FEATURE.md  __init__.py  __main__.py  asset_manager.py  autocorrect_service.py  config_manager.py  dictation_manager.py  gemini_corrector.py  history_manager.py  keystroke_buffer.py  loading_overlay.py  logger.py  main.py  mic_overlay.py  requirements.txt  text_buffer.py  tray_icon.py
correX/gui/: app_gui.py
tests/: README.md  __init__.py  test_config_manager.py  test_history_manager.py  test_keystroke_buffer.py
